--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -66,7 +66,7 @@
 			android:id="@+id/btn_expand"
 			android:layout_width="24dp"
 			android:layout_height="24dp"
-			android:src="@drawable/default_image"
+			android:src="@drawable/ic_expand_more"
 			android:scaleType="fitCenter"
 			android:focusable="false"
 			android:layout_marginStart="8dp"
@@ -83,7 +83,7 @@
 			android:id="@+id/btn_edit"
 			android:layout_width="32dp"
 			android:layout_height="32dp"
-			android:src="@drawable/default_image"
+			android:src="@drawable/ic_edit"
 			android:scaleType="fitCenter"
 			android:layout_weight="1"
 			android:focusable="false"
@@ -93,7 +93,7 @@
 			android:id="@+id/btn_backup"
 			android:layout_width="32dp"
 			android:layout_height="32dp"
-			android:src="@drawable/default_image"
+			android:src="@drawable/ic_backup"
 			android:scaleType="fitCenter"
 			android:layout_weight="1"
 			android:focusable="false"
