--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -129,7 +129,7 @@
 			android:text="Getting data"
 			android:textSize="16sp"
 			android:textStyle="bold"
-			android:textColor="@color/textColor"
+			android:textColor="#000000"
 			android:focusable="false" />
 		<TextView
 			android:id="@+id/tv_loading_desc"
@@ -170,8 +170,7 @@
 			android:scaleType="center"
 			android:focusable="false"
 			android:layout_marginStart="10dp"
-			android:layout_marginEnd="10dp"
-			app:srcCompat="@drawable/ic_discord" />
+			android:layout_marginEnd="10dp" />
 		<TextView
 			android:id="@+id/fab_label"
 			android:layout_width="wrap_content"
