--- a/app/src/main/res/layout/about_changelog.xml
+++ b/app/src/main/res/layout/about_changelog.xml
@@ -75,7 +75,7 @@
 					android:paddingBottom="2dp"
 					android:textSize="16sp"
 					android:textStyle="bold"
-					android:textColor="@color/textColor"
+					android:textColor="#000000"
 					android:singleLine="true"
 					android:ellipsize="end"
 					android:fadingEdgeLength="20dp"
@@ -129,7 +129,7 @@
 				android:layout_height="wrap_content"
 				android:layout_marginTop="8dp"
 				android:textSize="14sp"
-				android:textColor="@color/textColor"
+				android:textColor="#000000"
 				android:layout_marginStart="15dp"
 				android:layout_marginEnd="15dp"
 				android:autoLink="all"
