--- a/app/src/main/res/layout/view_editor.xml
+++ b/app/src/main/res/layout/view_editor.xml
@@ -181,6 +181,7 @@
 				android:id="@+id/editorLayout"
 				android:layout_width="match_parent"
 				android:layout_height="match_parent"
+				android:background="#FFFFFF"
 				android:orientation="vertical" />
 		</LinearLayout>
 	</LinearLayout>
