--- a/app/src/main/res/layout/component_item.xml
+++ b/app/src/main/res/layout/component_item.xml
@@ -60,6 +60,12 @@
 			android:layout_gravity="top" />
 	</LinearLayout>
 	<LinearLayout
+		android:id="@+id/baseOptions"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:padding="8dp"
+		android:orientation="horizontal" />
+	<LinearLayout
 		android:id="@+id/baseComponentDeleteUi"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
