--- a/app/src/main/res/layout/program_information.xml
+++ b/app/src/main/res/layout/program_information.xml
@@ -10,8 +10,7 @@
 		android:id="@+id/linear1"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:orientation="vertical"
-		android:background="?attr/colorPrimary">
+		android:orientation="vertical">
 		<LinearLayout
 			android:id="@+id/linear2"
 			android:layout_width="match_parent"
